problems solve and responsive done

--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
+/* font family */
 *{
     font-family: 'Poppins', sans-serif;
 
 }
 
-/* slider bg */
+/* slider area css */
 
   .slider-bg{
     height: 100vh;
